--- a/src/components/commmon/Header/Header.css
+++ b/src/components/commmon/Header/Header.css
@@ -3,7 +3,7 @@
     margin-left: 5px;
     display: flex;
     align-items: center;
-    width: 160;
+    width: 100%;
     height: 60px;
     background-color: aqua;
 }
